--- a/mini-blog/package.json
+++ b/mini-blog/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-app",
+  "name": "mini-blog",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -9,8 +9,9 @@
     "@testing-library/user-event": "^13.5.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-script": "^2.0.5",
+    "react-router-dom": "^7.4.1",
     "react-scripts": "5.0.1",
+    "styled-components": "^6.1.16",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
